# yourdash

./: .editorconfig  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .prettierrc  LICENSE  README.md  commitlint.config.js  next.config.cjs  notes.md  openapi.json  openapi.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  scratchpad.rnote  setupInstance.sh  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  yourdash.code-workspace
.temp-application-icons/: checklist.avif  code-studio.avif  dash.avif  endpoint-tester.avif  mastodon.avif  placeholder_application_icon.avif  whiteboard.avif
applications/: README.md  package.json
backup/: icons.json  license  package.json  react.d.ts  tsconfig.json
backup_core/: README.md  package-lock.json  package.json
backup_core/src/desktop_client/tauri-remake/src-tauri/: Cargo.toml
backup_core/src/desktop_client/tauri-remake/src-tauri/src/: main.rs
client/: .eslintrc  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
data/: includedApps.ts
desktop-client/: index.html  main.js  package.json  preload.js  renderer.js
docs/: application_and_module_development.md
documentation/: project_layout.xcf
electron/: index.ts  package.json  vite.config.ts
frontend/: .gitignore  .prettierrc.json  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json
lib/: color.ts  cssVariable.js  cssVariable.ts  helloGenerator.ts  server.js  server.ts  user.js  user.ts
meta/: build_all.sh  build_frontend.ps1  build_frontend.sh  install_dependancies.sh  (+12 more)
(+2400 files in other folders)
