[package]
name = "devdash-desktop"
version = "0.1.0"
description = "DevDash Desktop Client"
authors = [ "Ewsgit" ]
license = "MIT"
repository = ""
default-run = "devdash-desktop"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
tauri-bundler = "1.0.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "devdash-desktop"
path = "src/main.rs"
